Initial frontend version

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: Lexend;
+  src: url(assets/fonts/lexend/Lexend-VariableFont_wght.ttf);
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Lexend, sans-serif;
+}
