Added initial legal information

--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -1,3 +1,13 @@
-<div>
-  <img src="assets/banner.svg" width="512" />
-</div>
+<app-header scrollContainerSelector="app-start-page"></app-header>
+
+<section>
+  <h1>Hallo!</h1>
+
+  <p>
+    Der Webauftritt befindet sich noch in der Entstehung - schau bald wieder vorbei!
+  </p>
+
+  <p>
+    Aktuell findest du hier lediglich meine Rechtstexte. Mehr verrat ich erstmal nicht.
+  </p>
+</section>
