--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,3 +12,21 @@ body {
   margin: 0;
   font-family: Lexend, sans-serif;
 }
+
+p {
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+  color: lightcoral;
+
+  &:hover {
+    color: black;
+    text-decoration: underline;
+  }
+}
+
+h1 {
+  font-size: 2.0em;
+}
