--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+  <!-- TODO Move imprint, terms and conditions, cancellation policy and privacy policy here -->
+</footer>
