--- a/frontend/src/app/components/app/app.component.scss
+++ b/frontend/src/app/components/app/app.component.scss
@@ -1,5 +1,16 @@
 :host {
   display: block;
-  width: 100%;
-  height: 100%;
+}
+
+main {
+  margin: 0 auto;
+  width: 800px;
+  padding: 20px 30px;
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width: 800px) {
+  main {
+    width: 100%;
+  }
 }
