Added footer + hiding catalog behind flag

--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -4,6 +4,4 @@
   <router-outlet></router-outlet>
 </main>
 
-<footer>
-  <!-- TODO Move imprint, terms and conditions, cancellation policy and privacy policy here -->
-</footer>
+<app-footer></app-footer>
