--- a/frontend/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
+++ b/frontend/src/app/modules/catalog/modules/patterns/pages/pattern/pattern.page.html
@@ -1,5 +1,7 @@
+<h1>Basic Sweater der Fünfte</h1>
+
 <div class="layout">
-  <div class="images">
+  <div class="images desktop">
     <ul>
       <li><img src="/assets/examples/example.jpg"></li>
       <li><img src="/assets/examples/example.jpg"></li>
@@ -8,14 +10,14 @@
       <li><img src="/assets/examples/example.jpg"></li>
     </ul>
   </div>
+  <div class="images mobile">
+    <ul>
+      <li><img src="/assets/examples/example.jpg"></li>
+    </ul>
+  </div>
   <div class="details">
-    <h1>Basic Sweater der Fünfte</h1>
+    <app-price-tag class="price">ab 25,00 €</app-price-tag>
 
-    <div class="price">
-      <div class="price-value">ab 25,00 €</div>
-      <div class="price-info">zzgl. Versandkosten, ohne Mwst. (Kleinunternehmerregelung)</div>
-    </div>
-    
     <h2>Basic Variante</h2>
 
     <p>Wahlweise auch mit Ärmel im Lagenlook.</p>
@@ -61,7 +63,14 @@
       + 2,00 € für Bauchtasche<br>
       + 13,00 € für Stickerei
     </p>
-
+  </div>
+  <div class="images mobile">
+    <ul>
+      <li><img src="/assets/examples/example.jpg"></li>
+      <li><img src="/assets/examples/example.jpg"></li>
+      <li><img src="/assets/examples/example.jpg"></li>
+      <li><img src="/assets/examples/example.jpg"></li>
+    </ul>
   </div>
 </div>
 
