--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -5,6 +5,8 @@
   --primary-2: #8CF2F6;
   --primary-2-rgb: 140, 242, 246;
 
+  --mobile-breakpoint: 1000px;
+
   &.dark {
     --text: #FFFFFF;
     --text-rgb: 255, 255, 255;
