Fixed mobile navigation

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -47,7 +47,7 @@
   <a *flag="'CATALOG'" routerLink="/catalog/fabrics" routerLinkActive="active">Stoffe</a>
   <a *flag="'CATALOG'" routerLink="/catalog/embroideries" routerLinkActive="active">Stickereien</a>
   <a *flag="'CATALOG'" routerLink="/catalog/accessoires" routerLinkActive="active">Accessoires</a>
-  <a *unlessFlag="'CATALOG'" flag="'CATALOG'" routerLink="/legal/imprint" routerLinkActive="active">Impressum</a>
+  <a *unlessFlag="'CATALOG'" routerLink="/legal/imprint" routerLinkActive="active">Impressum</a>
   <a *unlessFlag="'CATALOG'" routerLink="/legal/terms-and-conditions" routerLinkActive="active">AGB</a>
   <a *unlessFlag="'CATALOG'" routerLink="/legal/cancellation-policy" routerLinkActive="active">Widerrufsbelehrung</a>
   <a *unlessFlag="'CATALOG'" routerLink="/legal/privacy-policy" routerLinkActive="active">Datenschutzerklärung</a>
