--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -45,7 +45,9 @@ ul.navigation {
 
 @media only screen and (max-width: 1000px) {
   .content {
+    width: 100%;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
   }
 }
