--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -58,6 +58,7 @@ nav {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 10000;
   overflow: auto;
   background-color: rgba(var(--contrast-rgb), 0.7);
   backdrop-filter: blur(8px);
