--- a/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
+++ b/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
@@ -19,7 +19,7 @@ ul.card-list {
     .image {
       line-height: 0;
       overflow: hidden;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
       border-radius: 8px;
 
       img {
