--- a/frontend/src/app/pages/start/start.page.html
+++ b/frontend/src/app/pages/start/start.page.html
@@ -5,5 +5,7 @@
 </p>
 
 <p>
-  Aktuell findest du hier lediglich meine Rechtstexte. Mehr verrat ich erstmal nicht.
+  Aktuell findest du <a href="/catalog/patterns">hier</a> bereits die angebotenen Schnitte und Preise dazu.
+  Wenn dich etwas interessiert schreibe mich gerne auf <a href="https://www.instagram.com/kicherkrabbe" target="_blank">Instagram</a>
+  oder per Mail an.
 </p>
