--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <img *ngIf="isLightMode() | async" src="/assets/kicherkrabbe_outlines_black.svg" width="128">
   </div>
 
-  <div class="catalog" *flag="'CATALOG'">
+  <div class="catalog">
     <div class="navigation-title"><a routerLink="/catalog">Katalog</a></div>
     <ul class="navigation">
       <li><a routerLink="/catalog/patterns">Schnitte</a></li>
