--- a/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
+++ b/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
@@ -16,11 +16,18 @@ ul.card-list {
     list-style: none;
     cursor: pointer;
 
-    .image {
+    .upper-content {
       line-height: 0;
       overflow: hidden;
       box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
       border-radius: 8px;
+      width: 100%;
+      height: 100%;
+    }
+
+    .image {
+      width: 100%;
+      height: 100%;
 
       img {
         width: 100%;
