--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -37,6 +37,11 @@ a {
   }
 }
 
+hr {
+  border-color: var(--background-mid-contrast);
+  border-width: 0 0 1px 0;
+}
+
 h1 {
   font-size: 2.5em;
   font-weight: 100;
