--- a/frontend/src/app/modules/catalog/pages/catalog/catalog.page.scss
+++ b/frontend/src/app/modules/catalog/pages/catalog/catalog.page.scss
@@ -20,7 +20,7 @@ ul.catalog {
       height: 200px;
       line-height: 0;
       overflow: hidden;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 6px 12px rgba(var(--shadow-rgba));
       border-radius: 8px;
 
       img {
