--- a/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
+++ b/frontend/src/app/modules/shared/components/card-list/card-list.component.scss
@@ -5,7 +5,7 @@ ul.card-list {
   flex-direction: row;
   flex-wrap: wrap;
   column-gap: 5%;
-  row-gap: 32px;
+  row-gap: 48px;
   justify-content: center;
 
   li.card-list-item {
@@ -19,7 +19,7 @@ ul.card-list {
     .upper-content {
       line-height: 0;
       overflow: hidden;
-      box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
+      box-shadow: 0 6px 12px 0 rgba(var(--shadow-rgba));
       border-radius: 8px;
       width: 100%;
       height: 100%;
