--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -61,3 +61,29 @@ h1, h2, h3, h4, h5 {
   font-family: Grandstander, sans-serif;
   word-break: break-word;
 }
+
+select {
+  appearance: none;
+  background: var(--background) url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 -960 960 960' width='24'><path fill='black' d='M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z'/></svg>") no-repeat;
+  background-position-x: 100%;
+  background-position-y: 50%;
+  border: 2px solid transparent;
+  padding: 8px 24px 8px 8px;
+  color: var(--text);
+  transition: border-color 0.3s ease-out;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  line-height: inherit;
+  outline: none;
+
+  &:hover {
+    border-color: rgba(var(--text-rgb), 1.0);
+  }
+}
+
+.theme.dark {
+  select {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 -960 960 960' width='24'><path fill='white' d='M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z'/></svg>");
+  }
+}
