--- a/frontend/src/app/modules/catalog/modules/fabrics/pages/fabric/fabric.page.html
+++ b/frontend/src/app/modules/catalog/modules/fabrics/pages/fabric/fabric.page.html
@@ -12,7 +12,7 @@
             Folgende Stoffarten sind verfügbar: <strong>{{ fabric.getAvailableTypesLabel() }}</strong>.
             Solltest du eine andere Stoffart wünschen, kontaktiere uns bitte.
         } @else {
-          Aktuell ist der Stoff nicht auf Lager. Wir können ihn aber für dich bestellen. Die Lieferzeit deines Kleidungsstücks verlängert sich dann um ca. 2 Wochen.
+          Aktuell ist der Stoff nicht auf Lager. Wir können ihn aber für dich bestellen. Die Lieferzeit deines Kleidungsstücks verlängert sich dann um ca. 1-2 Wochen.
         }
       </p>
 
